vault-http.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: vault-http
  namespace: vault
spec:
  hostnames:
  - "vault.rajesh-kumar.in"
  parentRefs:
  - name: rancher-master-gateway 
    namespace: cilium-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vault 
      port: 8200
